# sysadmin-automation

./: README.md  confirm-prompt  do-kexec  podman-change-zone  podman-change-zone.sh  ptyrun
dkms/: Makefile
dkms/src/: sign-dkms-module.sh
docker-compose-fix/: Cargo.toml
docker-compose-fix/src/: main.rs
docker-fix/: Makefile  docker-fix.sh  fix-docker.service  install.sh  readme.txt  uninstall.sh
docker-fix/etc/: fix-docker.service
google-drive/: Makefile  google-drive-sync.timer  install.sh
google-drive/etc/: google-drive-sync.service  google-drive-sync.timer
network-print-queue/etc/: network-print-queue.service
podman/etc/: podman-container@.service  podman-data-backup.service  podman-data-backup.timer
startup-notify/: Makefile  gen-status-msg  install.sh  startup-notify.service
startup-notify/etc/: startup-notify.service
startup-notify/src/: gen-status-msg.sh
zfs-auto-scrub/: MakeFile  install.sh  zfs-scrub.service  zfs-scrub.timer
zfs-auto-scrub/etc/: zfs-scrub@.service  zfs-scrub@.timer
zfs-auto-snapshot/: install.sh
zfs-backup/: Makefile  zfs-backup.service  zfs-backup.sh  zfs-backup.timer
zfs-backup/etc/: zfs-backup.conf  zfs-backup.service  zfs-backup.timer
zfs-backup/src/: zfs-backup.sh
