[package]
name = "docker-compose-fixed"
version = "0.1.0"
authors = ["Liss Heidrich <31625940+Clueliss@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.120"
serde_yaml = "0.8.15"
getopts = "0.2.21"
regex = "1"